changed tagname from jie-* to z-*

--- a/demo.html
+++ b/demo.html
@@ -5,24 +5,17 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no">
 
-<title>Jie RMB</title>
+<title>Zorro RMB Element</title>
 
 <script src="../webcomponentsjs/webcomponents.js"></script>
-<link rel="import" href="jie-rmb.html">
+<link rel="import" href="../docs-maker/z-doc.html">
+
+<link rel="import" href="z-rmb.html">
 
 </head>
 <body>
 
-<jie-rmb value="100"></jie-rmb><br>
-<jie-rmb front="￥" value="100"></jie-rmb><br>
-<jie-rmb front="" end="元" value="100"></jie-rmb><br>
-<jie-rmb decimal="false" value="100"></jie-rmb><br>
-<jie-rmb del decimal="false" value="100.50"></jie-rmb><br>
-<jie-rmb decimal="true" value="100"></jie-rmb><br>
-<jie-rmb decimal="true" value="100.50"></jie-rmb><br>
-<jie-rmb decimal="auto" value="100"></jie-rmb><br>
-<jie-rmb decimal="auto" value="100.50"></jie-rmb><br>
-<jie-rmb del value="100"></jie-rmb><br>
+<z-doc name="z-rmb"></z-doc>
 
 </body>
 </html>
